# ecommerce-drf

./: .gitignore  Makefile  TODO  elasticsearch_usage  pyproject.toml
apps/: urls.py
apps/products/: admin.py  documents.py  filter.py  urls.py
apps/products/models/: __init__.py  brand.py  category.py  documents.py  product.py
apps/products/serializers/: category.py  product.py
apps/products/views/: category.py  product.py
apps/shared/django/: model.py  queryset.py
apps/users/: urls.py
apps/users/models/: models.py  user.py
apps/users/serializers/: __init__.py  user.py
apps/users/views/: __init__.py  user.py
apps/utils/: validators.py
root/: settings.py  settings_dev.py
