[tool.poetry]
name = "ecommerce"
version = "0.1.0"
description = ""
authors = ["Khasanjon Mamadaliyev <khasanjon.eng@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.2"
drf-yasg = "^1.21.6"
pillow = "^9.5.0"
djangorestframework-simplejwt = "^5.2.2"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.6"
django-storages = "^1.13.2"
boto3 = "^1.26.165"
coreapi = "^2.3.3"
django-filter = "^23.2"
elasticsearch = "7.14.0"
elasticsearch-dsl = "7.4.0"
django-elasticsearch-dsl = "7.3"
django-elasticsearch-dsl-drf = "^0.22.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
